# VisualPerceptionAPI

./: .gitignore  CMakeLists.txt  README.md
docs/: Doxyfile
docs/html/: _image___region_8h_source.html  _image___segmenter_8h_source.html  _image_region_8h_source.html  _image_segmenter_8h_source.html  annotated.html  class_image___region-members.html  class_image___region.html  class_image___segmenter-members.html  class_image___segmenter.html  class_image_region-members.html  class_image_region.html  classes.html  classimage_segmenter-members.html  classimage_segmenter.html  dir_0970364fefdb8a23f3954a35eeb8eb70.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_cd6a8b58d8de613d51fe119cf230b951.html  dir_f04c54cfd4edd54b8b3c3c5965193284.html  dummy_8h_source.html  file__proc_8h_source.html  files.html  functions.html  functions_func.html  graph_legend.html  img__proc_8h_source.html  index.html  namespacefile__proc.html  namespaceimg__proc.html  namespacemembers.html  namespacemembers_func.html  namespaces.html
docs/html/search/: all_2.js  all_3.js  all_4.js  all_5.js  classes_0.js  functions_0.js  searchdata.js
docs/latex/: annotated.tex  class_image___region.tex  class_image___segmenter.tex  class_image_region.tex  classimage_segmenter.tex  dir_0970364fefdb8a23f3954a35eeb8eb70.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_cd6a8b58d8de613d51fe119cf230b951.tex  dir_f04c54cfd4edd54b8b3c3c5965193284.tex  namespacefile__proc.tex  namespaceimg__proc.tex  namespaces.tex  refman.tex
docs/teste/: Doxyfile.bak
docs/teste/html/: _image_region_8h_source.html  _image_segmenter_8h_source.html  annotated.html  class_image_region-members.html  class_image_region.html  (+19 more)
src/: CMakeLists.txt  dummy.cpp  dummy.h  main.cpp
src/ImageSegmenter/: CMakeLists.txt  CartesianCoord.cpp  CartesianCoord.h  ImageRegion.cpp  ImageRegion.h  ImageSegmenter.cpp  ImageSegmenter.h  Image_Region.cpp  Image_Region.h  Image_Segmenter.cpp  Image_Segmenter.h  Math.cpp  Math.h  RelativeCoord.cpp  RelativeCoord.h  RobotDefs.h  Segmented_Image.cpp  Segmented_Image.h  field_border.cpp  field_border.h  ransac_line2d.cpp  ransac_line2d.h  ransac_test.cpp  ransac_test.h
src/field_color_detection/: CMakeLists.txt  field_color_detector.cpp  field_color_detector.h
src/file_proc/: CMakeLists.txt  file_proc.cpp  file_proc.h
src/img_proc/: CMakeLists.txt  img_proc.cpp  img_proc.h
(+51 files in other folders)
